ajuste front running

--- a/front/src/app/cancel-selling/cancel-selling.component.html
+++ b/front/src/app/cancel-selling/cancel-selling.component.html
@@ -8,7 +8,7 @@
     </label>
   </div>
     <div class="row">
-    <label>Enter the address of the Tradeable Wallet you want to buy:
+    <label>Enter the address of the Tradeable Wallet which selling you want to cancel:
       <input type="text" [(ngModel)]="tradeableWalletAddress" (ngModelChange)="getPriceAndDescription()"  placeholder="ex.: 0xD2EDf4076B8F3A5357C5E395AB970B5B54098EEE" maxlength="42" size="50">
     </label>
   </div>
