--- a/front/src/app/withdraw-eth/withdraw-eth.component.html
+++ b/front/src/app/withdraw-eth/withdraw-eth.component.html
@@ -9,7 +9,7 @@
   </div>
     <div class="row">
     <label>Enter the address of your Tradeable Wallet:
-      <input type="text" [(ngModel)]="tradeableWalletAddress"  (ngModelChange)="getEthBalance()" placeholder="ex.: 0xD2EDf4076B8F3A5357C5E395AB970B5B54098EEE" maxlength="42" size="50">
+      <input type="text" [(ngModel)]="tradeableWalletAddress"  (ngModelChange)="getWalletInfo()" placeholder="ex.: 0xD2EDf4076B8F3A5357C5E395AB970B5B54098EEE" maxlength="42" size="50">
     </label>
   </div>
 
