--- a/front/src/app/withdraw-tokens/withdraw-tokens.component.html
+++ b/front/src/app/withdraw-tokens/withdraw-tokens.component.html
@@ -20,7 +20,7 @@
 
    <div class="row">
     <label>Balance:
-      <input type="number" [ngModel]="sBalance" maxlength="20" size="10" readonly disabled>
+      <input type="text" [ngModel]="sBalance" maxlength="20" size="10" readonly disabled>
     </label>
   </div>
 
