--- a/front/src/app/buy-wallet/buy-wallet.component.html
+++ b/front/src/app/buy-wallet/buy-wallet.component.html
@@ -57,7 +57,7 @@
      </div>
   </div>
 
-    <div class="row" *ngIf="error">
+    <div class="row" *ngIf="errorBack">
       <div class="card text-white bg-danger">
         <div class="card-body">
             <h5 class="card-title">Ops... Error</h5>
