--- a/front/src/app/new-wallet/new-wallet.component.html
+++ b/front/src/app/new-wallet/new-wallet.component.html
@@ -24,7 +24,7 @@
     <label>Take note of your wallet address: {{newTradeableWalletAddress}}</label>
   </div>
 </div>
-    <div class="row" *ngIf="error">
+    <div class="row" *ngIf="errorBack">
       <div class="card text-white bg-danger">
         <div class="card-body">
             <h5 class="card-title">Ops... Error</h5>
